# CI-PIPELINE-TP

./: pyproject.toml
.github/workflows/: ci.yml
app/: user_manager.py
