[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-pipeline-tp"
version = "0.1.0"
description = "Simple CI pipeline project"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]